--- a/components/camel-blueprint/pom.xml
+++ b/components/camel-blueprint/pom.xml
@@ -121,29 +121,6 @@
 
         <plugins>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>package</id>
-                        <phase>package</phase>
-                        <configuration>
-                            <target>
-                                <echo>Including source code from camel-core-xml in the camel-blueprint-sources.jar</echo>
-                                <jar destfile="${project.build.directory}/${project.artifactId}-${project.version}-sources.jar" update="true">
-                                  <fileset dir="${basedir}/../camel-core-osgi/src/main/java" includes="**/*" />
-                                  <fileset dir="${basedir}/../camel-core-xml/src/main/java" includes="**/*" />
-                                </jar>
-                            </target>
-                        </configuration>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
             <!-- add the sources from camel-core-osgi and camel-core-xml as source code in the camel-blueprint-sources.jar -->
             <plugin>
               <groupId>org.codehaus.mojo</groupId>
@@ -167,37 +144,11 @@
               </executions>
             </plugin>
 
-            <!-- after the eip-documentation-enricher we need to copy some shchema files -->
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-antrun-plugin</artifactId>
-              <executions>
-                <execution>
-                  <id>package</id>
-                  <phase>prepare-package</phase>
-                  <configuration>
-                    <target>
-                      <echo>Copying XSD schema to be included in JAR</echo>
-                      <replace file="${project.build.directory}/schema/camel-blueprint.xsd" token="http://camel.apache.org/schema/spring" value="http://camel.apache.org/schema/blueprint" />
-                      <copy todir="${project.build.directory}/classes">
-                        <fileset dir="${project.build.directory}/schema" />
-                      </copy>
-                      <!-- copy modified schemas back again in classes so they are included in the JAR -->
-                      <copy todir="${project.build.directory}/classes">
-                        <fileset dir="${project.build.directory}/schema"/>
-                      </copy>
-                    </target>
-                  </configuration>
-                  <goals>
-                    <goal>run</goal>
-                  </goals>
-                </execution>
-              </executions>
-            </plugin>
-
+            <!-- enrich the schemas with documentation -->
             <plugin>
               <groupId>org.apache.camel</groupId>
               <artifactId>camel-eip-documentation-enricher-maven-plugin</artifactId>
+              <version>${project.version}</version>
               <executions>
                 <execution>
                   <id>eip-documentation-enricher</id>
@@ -372,6 +323,43 @@
                           <goals>
                               <goal>run</goal>
                           </goals>
+                      </execution>
+                      <execution>
+                        <id>include-sources</id>
+                        <phase>package</phase>
+                        <configuration>
+                          <target>
+                            <echo>Including source code from camel-core-xml in the camel-blueprint-sources.jar</echo>
+                            <jar destfile="${project.build.directory}/${project.artifactId}-${project.version}-sources.jar" update="true">
+                              <fileset dir="${basedir}/../camel-core-osgi/src/main/java" includes="**/*" />
+                              <fileset dir="${basedir}/../camel-core-xml/src/main/java" includes="**/*" />
+                            </jar>
+                          </target>
+                        </configuration>
+                        <goals>
+                          <goal>run</goal>
+                        </goals>
+                      </execution>
+                      <!-- after the eip-documentation-enricher we need to copy some shchema files -->
+                      <execution>
+                        <id>include-schemas</id>
+                        <phase>prepare-package</phase>
+                        <configuration>
+                          <target>
+                            <echo>Copying XSD schema to be included in JAR</echo>
+                            <replace file="${project.build.directory}/schema/camel-blueprint.xsd" token="http://camel.apache.org/schema/spring" value="http://camel.apache.org/schema/blueprint" />
+                            <copy todir="${project.build.directory}/classes">
+                              <fileset dir="${project.build.directory}/schema" />
+                            </copy>
+                            <!-- copy modified schemas back again in classes so they are included in the JAR -->
+                            <copy todir="${project.build.directory}/classes">
+                              <fileset dir="${project.build.directory}/schema"/>
+                            </copy>
+                          </target>
+                        </configuration>
+                        <goals>
+                          <goal>run</goal>
+                        </goals>
                       </execution>
                   </executions>
               </plugin>
