--- a/apache-camel/pom.xml
+++ b/apache-camel/pom.xml
@@ -241,6 +241,10 @@
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
+      <artifactId>camel-ganglia</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
       <artifactId>camel-geocoder</artifactId>
     </dependency>
      <dependency>
