--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -860,6 +860,11 @@
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
+        <artifactId>camel-ganglia</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
         <artifactId>camel-geocoder</artifactId>
         <version>${project.version}</version>
       </dependency>
