CAMEL-8378: Move Camel catalog commands to separate module

--- a/platforms/karaf/pom.xml
+++ b/platforms/karaf/pom.xml
@@ -30,6 +30,7 @@
 
     <modules>
       <module>commands</module>
+      <module>commands-catalog</module>
       <module>features</module>
     </modules>
 
