--- a/components/camel-jaxb/pom.xml
+++ b/components/camel-jaxb/pom.xml
@@ -46,6 +46,10 @@
 
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-impl</artifactId>
         </dependency>
 
@@ -97,8 +101,8 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-          		<forkCount>1</forkCount>
-	  		<reuseForks>false</reuseForks>
+                  <forkCount>1</forkCount>
+                  <reuseForks>false</reuseForks>
                 </configuration>
             </plugin>
         </plugins>
