camel-web to work with Java 8

--- a/components/camel-web/pom.xml
+++ b/components/camel-web/pom.xml
@@ -47,6 +47,10 @@
             <artifactId>camel-spring</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-jaxb</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.sun.jersey.contribs</groupId>
             <artifactId>jersey-spring</artifactId>
             <version>${jersey-version}</version>
