JAXB needs both core and impl to work on Java8

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -3054,6 +3054,30 @@
         <jdk>1.7</jdk>
       </activation>
 
+      <!-- Update JAXB version here -->
+      <properties>
+        <jaxb-version>2.2.11</jaxb-version>
+      </properties>
+
+      <dependencies>
+        <dependency>
+          <groupId>com.sun.xml.bind</groupId>
+          <artifactId>jaxb-core</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>com.sun.xml.bind</groupId>
+          <artifactId>jaxb-impl</artifactId>
+        </dependency>
+      </dependencies>
+    </profile>
+
+    <profile>
+      <id>jdk1.8</id>
+      <activation>
+        <jdk>1.8</jdk>
+      </activation>
+
+      <!-- Update JAXB version here -->
       <properties>
         <jaxb-version>2.2.11</jaxb-version>
       </properties>
