--- a/tests/camel-performance/pom.xml
+++ b/tests/camel-performance/pom.xml
@@ -118,11 +118,13 @@
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-server</artifactId>
+      <version>${jetty-version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-servlet</artifactId>
+      <version>${jetty-version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
