fixed the parent pom issue of the test modules

--- a/pom.xml
+++ b/pom.xml
@@ -214,7 +214,7 @@
             <preparationGoals>clean install</preparationGoals>
             <goals>deploy</goals>
             <!-- The profile we want to use when doing the release -->
-            <arguments>-Prelease,enable-schemagen,apt,sourcecheck,hibernate,osgi.test,performance.test</arguments>
+            <arguments>-Prelease,enable-schemagen,apt,sourcecheck,hibernate</arguments>
             <autoVersionSubmodules>true</autoVersionSubmodules>
           </configuration>
         </plugin>
