--- a/components/camel-xmpp/pom.xml
+++ b/components/camel-xmpp/pom.xml
@@ -47,14 +47,20 @@
     </dependency>
     <dependency>
       <groupId>org.igniterealtime.smack</groupId>
-      <artifactId>smack</artifactId>
+      <artifactId>smack-core</artifactId>
       <version>${smack-version}</version>
     </dependency>
     <dependency>
       <groupId>org.igniterealtime.smack</groupId>
-      <artifactId>smackx</artifactId>
+      <artifactId>smack-extensions</artifactId>
       <version>${smack-version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.igniterealtime.smack</groupId>
+      <artifactId>smack-tcp</artifactId>
+      <version>${smack-version}</version>
+    </dependency>
+
 
     <!-- test dependencies -->
     <dependency>
@@ -86,6 +92,24 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <build>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <forkMode>pertest</forkMode>
+              <systemProperties>
+                <property>
+                  <name>javax.net.ssl.trustStore</name>
+                  <value>${basedir}/src/test/resources/xmppServer.jks</value>
+                </property>
+              </systemProperties>
+            </configuration>
+          </plugin> 
+      </plugins>
+  </build>
 
     <!-- skip tests on Windows and AIX -->
     <profiles>
