--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -409,8 +409,8 @@
     <!-- use slf4j-api 1.6.x to be easy compatible with older Camel releases -->
     <slf4j-api-version>1.6.6</slf4j-api-version>
     <slf4j-version>1.7.10</slf4j-version>
-    <smack-bundle-version>3.2.1_1</smack-bundle-version>
-    <smack-version>3.2.1</smack-version>
+    <smack-bundle-version>4.0.6</smack-bundle-version>
+    <smack-version>4.0.6</smack-version>
     <snakeyaml-version>1.14</snakeyaml-version>
     <snappy-version>1.1.0.1</snappy-version>
     <snmp4j-version>2.3.0_1</snmp4j-version>
