--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -177,6 +177,7 @@
     <geronimo-servlet-spec-version>1.0</geronimo-servlet-spec-version>
     <geronimo-ws-metadata-spec-version>1.1.3</geronimo-ws-metadata-spec-version>
     <gmaven-plugin-version>1.4</gmaven-plugin-version>
+    <gmetric4j-bundle-version>1.0.7</gmetric4j-bundle-version>
     <gmetric4j-version>1.0.9</gmetric4j-version>
     <google-app-engine-version>1.8.3</google-app-engine-version>
     <google-app-engine-bundle-version>1.8.3_1</google-app-engine-bundle-version>
