--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -419,6 +419,7 @@
     <solr-version>4.9.0</solr-version>
     <solr-version-range>[4.9,5)</solr-version-range>
     <spark-rest-version>2.0.0</spark-rest-version>
+    <spark-rest-bundle-version>2.0.0_1</spark-rest-bundle-version>
     <splunk-version>1.3.0_1</splunk-version>
     <spring-batch-version>3.0.3.RELEASE</spring-batch-version>
     <spring-batch-bundle-version>3.0.3.RELEASE_1</spring-batch-bundle-version>
