--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -290,7 +290,7 @@
     <jt400-bundle-version>6.7_1</jt400-bundle-version>
     <juel-bundle-version>2.1.3_1</juel-bundle-version>
     <juel-version>2.1.3</juel-version>
-    <junit-bundle-version>4.12_1</junit-bundle-version>
+    <junit-bundle-version>4.11_2</junit-bundle-version>
     <junit-version>4.12</junit-version>
     <jython-version>2.5.3</jython-version>
     <jzlib-version>1.1.3</jzlib-version>
@@ -344,7 +344,8 @@
     <mqtt-client-version>1.10</mqtt-client-version>
     <msv-version>2013.6.1</msv-version>
     <mustache-java-version>0.9.0</mustache-java-version>
-    <mustache-bundle-version>0.9.0_1</mustache-bundle-version>
+    <mustache-guava-version>16.0</mustache-guava-version>
+    <mustache-bundle-version>0.8.16_1</mustache-bundle-version>
     <mvel-version>2.2.1.Final</mvel-version>
     <mybatis-version>3.2.8</mybatis-version>
     <neethi-bundle-version>3.0.1</neethi-bundle-version>
