CAMEL-8332: Additional features for camel-dozer component
This commit includes the following changes:
* Added a new converter which allows the user to evaluate an expression using Camel language support and assign it to an output field.
* Enabled javax.el support to allow variables to be used in mappings.
* Users can specify the name of a DozerBeanMapperConfiguration bean instead of a Dozer mapping file to allow for fine-grained configuration of the Dozer environment.
* The sourceModel option is actually used now and targetModel is marked as required.

--- a/components/camel-dozer/pom.xml
+++ b/components/camel-dozer/pom.xml
@@ -45,7 +45,16 @@
             <groupId>net.sf.dozer</groupId>
             <artifactId>dozer</artifactId>
         </dependency>
-
+        <dependency>
+          <groupId>javax.el</groupId>
+          <artifactId>javax.el-api</artifactId>
+          <version>${javax.el-api-version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.glassfish.web</groupId>
+          <artifactId>javax.el</artifactId>
+          <version>${javax.el-version}</version>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
