Added commons IO to parent POM.

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -2311,6 +2311,11 @@
         <version>${commons-collections-version}</version>
       </dependency>
       <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>${commons-io-version}</version>
+      </dependency>
+      <dependency>
         <groupId>commons-httpclient</groupId>
         <artifactId>commons-httpclient</artifactId>
         <version>${httpclient-version}</version>
