Downgrade the spring retry version

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -432,7 +432,8 @@
     <spring-javaconfig-version>1.0.0-20090215</spring-javaconfig-version>
     <spring-ldap-version>2.0.2.RELEASE</spring-ldap-version>
     <spring-ldap-bundle-version>2.0.2.RELEASE_1</spring-ldap-bundle-version>
-    <spring-retry-version>1.1.0.RELEASE</spring-retry-version>
+    <!-- spring 1.1.0 is not OSGi bundle any more -->
+    <spring-retry-version>1.0.3.RELEASE</spring-retry-version>
     <!-- Spring 4 can be used in OSGi, but not with spring-dm.  Allow Spring 4 for the bundle imports. -->
     <spring-version-range>[3.2,5)</spring-version-range>
     <!-- However, spring-dm does not support spring 4.x so import-range must be 3.x for the -->
