Added camel-kura into release kit

--- a/apache-camel/pom.xml
+++ b/apache-camel/pom.xml
@@ -448,6 +448,10 @@
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
+      <artifactId>camel-kura</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
       <artifactId>camel-lucene</artifactId>
     </dependency>
     <dependency>
