--- a/components/camel-jcr/pom.xml
+++ b/components/camel-jcr/pom.xml
@@ -15,7 +15,8 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -51,6 +52,12 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <!-- jackrabbit uses lucene 3.x -->
+    <dependency>
+      <groupId>org.apache.lucene</groupId>
+      <artifactId>lucene-core</artifactId>
+      <version>${lucene3-version}</version>
+    </dependency>
     <!-- use rome 1.0 which is a valid Maven artifact -->
     <dependency>
       <groupId>rome</groupId>
@@ -62,11 +69,11 @@
       <artifactId>jcr</artifactId>
       <version>${jcr-version}</version>
     </dependency>
-    
+
     <!-- test dependencies -->
     <dependency>
       <groupId>org.apache.camel</groupId>
-      <artifactId>camel-test</artifactId>      
+      <artifactId>camel-test</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -82,14 +89,13 @@
   </dependencies>
   <build>
     <plugins>
-     <plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <forkCount>1</forkCount>
-	  <reuseForks>false</reuseForks>
+          <forkMode>always</forkMode>
         </configuration>
-     </plugin>
+      </plugin>
     </plugins>
   </build>
 </project>
