--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -226,7 +226,7 @@
     <jini-version>2.1</jini-version>
     <jackson-version>1.9.12</jackson-version>
     <jackson2-version>2.4.3</jackson2-version>
-    <jackrabbit-version>2.8.0</jackrabbit-version>
+    <jackrabbit-version>2.9.1</jackrabbit-version>
     <jain-sip-ri-bundle-version>1.2.154_2</jain-sip-ri-bundle-version>
     <jasper-bundle-version>6.0.36_1</jasper-bundle-version>
     <jasypt-bundle-version>1.9.2_1</jasypt-bundle-version>
@@ -304,6 +304,8 @@
     <!-- virtual dependency only used by Eclipse m2e -->
     <lifecycle-mapping-version>1.0.0</lifecycle-mapping-version>
     <log4j-version>1.2.17</log4j-version>
+    <lucene3-bundle-version>3.6.0_1</lucene3-bundle-version>
+    <lucene3-version>3.6.0</lucene3-version>
     <lucene-bundle-version>4.10.3_1</lucene-bundle-version>
     <lucene-version>4.10.3</lucene-version>
     <lucene-version-range>[4.5,5)</lucene-version-range>
