--- a/components/pom.xml
+++ b/components/pom.xml
@@ -50,6 +50,8 @@
     <module>camel-jetty-common</module>
     <module>camel-jetty8</module>
     <module>camel-jetty9</module>
+    <!-- camel-jetty is used to republish the camel-jetty8 -->
+    <module>camel-jetty</module>
     <module>camel-cxf</module>
     <module>camel-cxf-transport</module>
     <module>camel-web-standalone</module>
