[CAMEL-8448] Expose mina-2.0 instead of mina-1.1 through BOM

--- a/components/camel-mina/pom.xml
+++ b/components/camel-mina/pom.xml
@@ -54,6 +54,7 @@
                     <artifactId>slf4j-api</artifactId>
                 </exclusion>
             </exclusions>
+            <version>${mina-version}</version>
         </dependency>
 
         <!-- testing -->
