--- a/components/camel-quickfix/pom.xml
+++ b/components/camel-quickfix/pom.xml
@@ -60,6 +60,7 @@
     <dependency>
       <groupId>org.apache.mina</groupId>
       <artifactId>mina-core</artifactId>
+      <version>${mina-version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
