--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -2155,7 +2155,7 @@
       <dependency>
         <groupId>org.apache.mina</groupId>
         <artifactId>mina-core</artifactId>
-        <version>${mina-version}</version>
+        <version>${mina2-version}</version>
       </dependency>
 
       <dependency>
