--- a/components/camel-syslog/pom.xml
+++ b/components/camel-syslog/pom.xml
@@ -53,7 +53,7 @@
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
-      <artifactId>camel-mina</artifactId>
+      <artifactId>camel-mina2</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
