Fixed test module issue of release

--- a/pom.xml
+++ b/pom.xml
@@ -158,7 +158,7 @@
                   <requireMavenVersion>
                     <version>${maven-enforcer-require-maven-version}</version>
                   </requireMavenVersion>
-                </rules>    
+                </rules>
               </configuration>
             </execution>
           </executions>
@@ -260,7 +260,7 @@
             <preparationGoals>clean install</preparationGoals>
             <goals>deploy</goals>
             <!-- The profile we want to use when doing the release -->
-            <arguments>-Prelease,enable-schemagen,apt,sourcecheck,hibernate,osgi.test,performance.test</arguments>
+            <arguments>-Prelease,enable-schemagen,apt,sourcecheck,hibernate</arguments>
             <autoVersionSubmodules>true</autoVersionSubmodules>
           </configuration>
         </plugin>
