--- a/components/pom.xml
+++ b/components/pom.xml
@@ -73,6 +73,7 @@
     <module>camel-bean-validator</module>
     <module>camel-barcode</module>
     <module>camel-bindy</module>
+    <module>camel-boon</module>
     <module>camel-box</module>
     <module>camel-cache</module>
     <module>camel-cassandraql</module>
