CAMEL-8465 Add groups/getPosts endpoint to camel-linkedin

--- a/components/camel-linkedin/camel-linkedin-component/pom.xml
+++ b/components/camel-linkedin/camel-linkedin-component/pom.xml
@@ -146,6 +146,13 @@
                   <apiName>groups</apiName>
                   <proxyClass>org.apache.camel.component.linkedin.api.GroupsResource</proxyClass>
                   <fromJavadoc />
+                  <nullableOptions>
+                    <nullableOption>category</nullableOption>
+                    <nullableOption>count</nullableOption>
+                    <nullableOption>modified_since</nullableOption>
+                    <nullableOption>order</nullableOption>
+                    <nullableOption>start</nullableOption>
+                  </nullableOptions>
                 </api>
                 <api>
                   <apiName>jobs</apiName>
