CAMEL-8497 Add support for setting a commit status, getting list of files associated with PR and retrieving a specific file content.

--- a/components/camel-github/pom.xml
+++ b/components/camel-github/pom.xml
@@ -39,6 +39,11 @@
       <version>${egit-github-core-version}</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>${commons-codec-version}</version>
+    </dependency>
 
     <!-- testing -->
     <dependency>
