CAMEL-8475 Added test to verify the issue

--- a/components/camel-testng/pom.xml
+++ b/components/camel-testng/pom.xml
@@ -45,6 +45,10 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
+            <artifactId>camel-spring-javaconfig</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
             <artifactId>${camel-test-spring-artifactId}</artifactId>
         </dependency>
         <dependency>
