--- a/platforms/catalog/pom.xml
+++ b/platforms/catalog/pom.xml
@@ -31,13 +31,7 @@
 
   <properties>
     <camel.osgi.export.pkg>
-      org.apache.camel.catalog,
-      org.apache.camel.catalog.archetypes,
-      org.apache.camel.catalog.components,
-      org.apache.camel.catalog.dataformats,
-      org.apache.camel.catalog.languages,
-      org.apache.camel.catalog.models,
-      org.apache.camel.catalog.schemas
+      org.apache.camel.catalog*
     </camel.osgi.export.pkg>
   </properties>
 
