CAMEL-7999: Add test to validate all the json schemas in the camel-catalog

--- a/platforms/catalog/pom.xml
+++ b/platforms/catalog/pom.xml
@@ -41,6 +41,12 @@
 
     <!-- testing -->
     <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>${jackson2-version}</version>
+    </dependency>
+
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
