--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -367,6 +367,7 @@
     <oro-bundle-version>2.0.8_6</oro-bundle-version>
     <oscache-bundle-version>2.4_5</oscache-bundle-version>
     <osgi-version>4.3.1</osgi-version>
+    <paho-version>1.0.2</paho-version>
     <paranamer-bundle-version>2.6_1</paranamer-bundle-version>
     <pax-exam-version>4.3.0</pax-exam-version>
     <pax-tiny-bundle-version>1.3.1</pax-tiny-bundle-version>
