--- a/apache-camel/pom.xml
+++ b/apache-camel/pom.xml
@@ -552,6 +552,10 @@
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
+      <artifactId>camel-paho</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
       <artifactId>camel-paxlogging</artifactId>
     </dependency>
     <dependency>
