--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -1217,6 +1217,11 @@
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
+        <artifactId>camel-paho</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
         <artifactId>camel-paxlogging</artifactId>
         <version>${project.version}</version>
       </dependency>
