Add boom to kit

--- a/apache-camel/pom.xml
+++ b/apache-camel/pom.xml
@@ -125,6 +125,10 @@
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
+      <artifactId>camel-boon</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
       <artifactId>camel-cache</artifactId>
     </dependency>
     <dependency>
