--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -81,6 +81,7 @@
     <cassandra-driver-guava-version>16.0.1</cassandra-driver-guava-version>
     <cassandra-version>2.1.2</cassandra-version>
     <cassandra-unit-version>2.0.2.2</cassandra-unit-version>
+    <castor-version>1.3.2</castor-version>
     <castor-bundle-version>1.3.2_2</castor-bundle-version>
     <cdi-api-version>1.0</cdi-api-version>
     <cglib-bundle-version>2.1_3_7</cglib-bundle-version>
@@ -2096,6 +2097,11 @@
       </dependency>
 
       <!-- optional castor dependencies -->
+      <dependency>
+        <groupId>org.codehaus.castor</groupId>
+        <artifactId>castor-xml</artifactId>
+        <version>${castor-version}</version>
+      </dependency>
       <dependency>
         <groupId>org.apache.servicemix.bundles</groupId>
         <artifactId>org.apache.servicemix.bundles.castor</artifactId>
