--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -74,6 +74,7 @@
     <build-helper-maven-plugin-version>1.8</build-helper-maven-plugin-version>
     <c3p0-version>0.9.1.2</c3p0-version>
     <camel-test-spring-artifactId>camel-test-spring3</camel-test-spring-artifactId>
+    <castor-version>1.3.2</castor-version>
     <castor-bundle-version>1.3.2_2</castor-bundle-version>
     <cdi-api-version>1.2</cdi-api-version>
     <cglib-bundle-version>2.1_3_7</cglib-bundle-version>
@@ -1881,6 +1882,11 @@
       </dependency>
 
       <!-- optional castor dependencies -->
+      <dependency>
+        <groupId>org.codehaus.castor</groupId>
+        <artifactId>castor-xml</artifactId>
+        <version>${castor-version}</version>
+      </dependency>
       <dependency>
         <groupId>org.apache.servicemix.bundles</groupId>
         <artifactId>org.apache.servicemix.bundles.castor</artifactId>
