[CAMEL-8530]can't install camel-github feature in karaf

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -140,6 +140,7 @@
     <eclipse-equinox-common-version>3.3.0-v20070426</eclipse-equinox-common-version>
     <ehcache-version>2.9.1</ehcache-version>
     <egit-github-core-version>2.1.5</egit-github-core-version>
+    <egit-github-core-bundle-version>2.1.5_1</egit-github-core-bundle-version>
     <elasticsearch-bundle-version>1.4.2_1</elasticsearch-bundle-version>
     <elasticsearch-version>1.4.2</elasticsearch-version>
     <el-api-1.0-version>1.0.1</el-api-1.0-version>
